--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>task-manager</artifactId>
+	<artifactId>kanban</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>task-manager</name>
-	<description>Task manager with Spring Boot</description>
+	<name>kanban</name>
+	<description>kanban with Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
